--- a/client/styles/home.css
+++ b/client/styles/home.css
@@ -1,4 +1,4 @@
-body, html {
+/* body, html {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
@@ -31,7 +31,7 @@ nav ul li a {
     color: white;
     text-decoration: none;
     font-weight: bold;
-}
+} */
 
 .content {
     padding-top: 50px;
