--- a/client/styles/schedule.css
+++ b/client/styles/schedule.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     font-family: Arial, sans-serif;
     display: flex;
     flex-direction: column;
@@ -6,7 +6,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f4f4f9;
-}
+} */
 
 .calendar-container {
     display: flex;
