--- a/client/styles/users.css
+++ b/client/styles/users.css
@@ -1,10 +1,10 @@
-body {
+/* body {
     font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f0f0f0;
+    background-color: #f0f0f0; */
 }
 .login-container {
     background: white;
