--- a/client/styles/navigation.css
+++ b/client/styles/navigation.css
@@ -49,12 +49,13 @@ header {
 .header--nav-menu ul {
     list-style: none;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .header--nav-menu ul li {
     font-size: x-large;
     margin: 0.5rem 1rem;
+    padding: 0 1rem;
 }
 
 .header--nav-menu ul li a {
@@ -67,7 +68,43 @@ header {
     min-height: 70vh;
 }
 
-.footer {
+footer {
+    align-items: center;
     background-color: #0FA4AF;
+    display: flex;
+    justify-content: space-around;
     min-height: 15vh;
+    padding: 0 2rem;
+}
+
+.footer--logo {
+    align-items: center;
+    background-color: #0FA4AF;
+    justify-content: center;
+}
+
+.footer--contact {
+    background-color: #0FA4AF;
+}
+
+.footer--nav {
+    background-color: #0FA4AF;
+    padding: 0.5rem;
+}
+
+.footer--nav ul {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.footer--nav ul li {
+    margin: 0.25rem 0.5rem;
+}
+
+.footer--nav ul li a {
+    color: #024950;
+    text-decoration: none;
+    font-weight: bold;
 }
