--- a/client/styles/navigation.css
+++ b/client/styles/navigation.css
@@ -3,8 +3,12 @@ header {
     background-color: #024950;
     display: flex;
     justify-content: space-between;
-    min-height: 15vh;
+    left: 0;
+    min-height: 200px;
     padding: 0 2rem;
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
 .header--logo {
@@ -33,6 +37,7 @@ header {
 .header--nav-user ul {
     list-style: none;
     display: flex;
+    flex-wrap: wrap;
     justify-content: end;
 }
 
@@ -65,7 +70,7 @@ header {
 }
 
 #content {
-    min-height: 70vh;
+    min-height: 80vh;
 }
 
 footer {
@@ -73,7 +78,7 @@ footer {
     background-color: #0FA4AF;
     display: flex;
     justify-content: space-around;
-    min-height: 15vh;
+    min-height: 20vh;
     padding: 0 2rem;
 }
 
