--- a/client/styles/cookie-consent.css
+++ b/client/styles/cookie-consent.css
@@ -1,9 +1,3 @@
-/* body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-} */
-
 .cookie-consent {
     position: fixed;
     bottom: 0;
@@ -12,7 +6,7 @@
     color: #fff;
     text-align: center;
     padding: 10px 0;
-    display: none;
+    z-index: 1000;
 }
 
 .cookie-consent p {
