--- a/client/styles/navigation.css
+++ b/client/styles/navigation.css
@@ -1,33 +1,28 @@
+:root {
+    --menu-width: 130px;
+}
+
 header {
     align-items: center;
     background-color: #024950;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
-    min-height: 15vh;
-    padding: 0 2rem;
+    left: var(--menu-width);
+    position: relative;
+    max-width: calc(100% - var(--menu-width));
 }
 
 .header--logo {
     align-items: center;
     background-color: #024950;
     justify-content: center;
-}
-
-.header--nav {
-    background-color: #024950;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
+    padding: 0 2rem;
 }
 
 .header--nav-user {
     background-color: #024950;
-    padding: 0.5rem;
-}
-
-.header--nav-menu {
-    background-color: #024950;
-    padding: 0.5rem;
+    padding: 0 2rem;
 }
 
 .header--nav-user ul {
@@ -37,7 +32,12 @@ header {
 }
 
 .header--nav-user ul li {
-    margin: 0.5rem 1rem;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: medium;
+    padding: 0.5rem 1rem;
 }
 
 .header--nav-user ul li a {
@@ -46,26 +46,49 @@ header {
     font-weight: bold;
 }
 
-.header--nav-menu ul {
+.nav--menu {
+    align-items: center;
+    background-color: #024950;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    left: 0;
+    position: fixed;
+    top: 0;
+    width: var(--menu-width);
+}
+
+.nav--menu-icon {
+    color: white; 
+    height: 40px;
+    width: 40px;
+
+}
+
+.nav--menu ul {
     list-style: none;
     display: flex;
+    flex-direction: column;
     justify-content: center;
 }
 
-.header--nav-menu ul li {
-    font-size: x-large;
-    margin: 0.5rem 1rem;
-    padding: 0 1rem;
+.nav--menu ul li {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: medium;
+    padding: 2rem 0.5rem;
 }
 
-.header--nav-menu ul li a {
+.nav--menu ul li a {
     color: white;
     text-decoration: none;
     font-weight: bold;
 }
 
 #content {
-    min-height: 70vh;
+    min-height: 90vh;
 }
 
 footer {
