--- a/client/styles/navigation.css
+++ b/client/styles/navigation.css
@@ -1,37 +1,38 @@
 :root {
-    --menu-width: 130px;
+    --menu-width-full: 130px;
+    --menu-width-colapsed: 50px;
+    --menu-background-collor: #024950;
+    --menu-items-collor: white;
+    --header-height-full: 100px;
+    --header-heght-colapsed: 50px;
+    --header-backgroun-collor: #024950;
+    --header-items-collor: white;
 }
 
-header {
+.header-container {
     align-items: center;
-    background-color: #024950;
+    background-color: var(--header-backgroun-collor);
     display: flex;
     flex-direction: row;
+    height: var(--header-height-full);
     justify-content: space-between;
-    left: var(--menu-width);
-    position: relative;
-    max-width: calc(100% - var(--menu-width));
+    left: var(--menu-width-full);
+    margin: 0;
+    max-width: calc(100% - var(--menu-width-full));
+    padding: 0.5rem 2rem;
     position: fixed;
     top: 0;
     width: 100%;
 }
 
-.header--logo {
-    align-items: center;
-    background-color: #024950;
-    justify-content: center;
-    padding: 0 2rem;
-}
-
-.header--nav-user {
-    background-color: #024950;
-    padding: 0 2rem;
+.header--logo, .header--nav-user {
+    margin: 0;
+    padding: 0;
 }
 
 .header--nav-user ul {
     list-style: none;
     display: flex;
-    flex-wrap: wrap;
     justify-content: end;
 }
 
@@ -41,39 +42,40 @@ header {
     flex-direction: column;
     justify-content: center;
     font-size: medium;
-    padding: 0.5rem 1rem;
+    padding: 0 1rem;
 }
 
 .header--nav-user ul li a {
-    color: white;
+    color: var(--header-items-collor);
     text-decoration: none;
     font-weight: bold;
 }
 
 .nav--menu {
     align-items: center;
-    background-color: #024950;
+    background-color: var(--menu-background-collor);
     display: flex;
     height: 100%;
     justify-content: center;
     left: 0;
     position: fixed;
     top: 0;
-    width: var(--menu-width);
+    width: var(--menu-width-full);
 }
 
-.nav--menu-icon {
-    color: white; 
-    height: 40px;
-    width: 40px;
-
-}
 
 .nav--menu ul {
     list-style: none;
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.nav--menu-item {
+    color: var(--menu-items-collor); 
+    height: 40px;
+    width: 40px;
+
 }
 
 .nav--menu ul li {
@@ -86,13 +88,15 @@ header {
 }
 
 .nav--menu ul li a {
-    color: white;
+    color: var(--menu-items-collor);
     text-decoration: none;
     font-weight: bold;
 }
 
 #content {
+    left: var(--menu-width-full);
     min-height: 90vh;
+    top: var(--header-height-full)
 }
 
 footer {
