Finished terms and conditions, header, footer and menu styles

--- a/client/styles.css
+++ b/client/styles.css
@@ -1,12 +1,13 @@
+@import "./assets/frame/bootstrap.min.css";
 @import "./styles/navigation.css";
 @import "./styles/cookie-consent.css"; 
-/* @import "./styles/home.css";
+@import "./styles/policies.css"; 
 @import "./styles/schedule.css";
 @import "./styles/files.css";
+/* @import "./styles/home.css";
 @import "./styles/users.css";
 @import "./styles/cart.css";
-@import "./styles/payment.css";
-@import "./styles/policies.css"; */
+@import "./styles/payment.css";*/
 
 body {
     font-family: "Montserrat", sans-serif;
