--- a/client/styles/navigation.css
+++ b/client/styles/navigation.css
@@ -1,81 +1,109 @@
 :root {
-    --menu-width-full: 130px;
-    --menu-width-colapsed: 50px;
+    --menu-width-large: 130px;
+    --menu-height-small: 100px;
     --menu-background-collor: #024950;
     --menu-items-collor: white;
-    --header-height-full: 100px;
-    --header-heght-colapsed: 50px;
-    --header-backgroun-collor: #024950;
+    --menu-items-hover: #0FA4AF;
+    --header-height-full: 75px;
+    --header-height-colapsed: 40px;
+    --header-background-collor: #024950;
     --header-items-collor: white;
+    --header-items-hover: #0FA4AF;
+    --footer-height-large: 115px;
+    --footer-background-collor: #0FA4AF;
+    --footer-items-collor: #024950;
 }
 
 .header-container {
     align-items: center;
-    background-color: var(--header-backgroun-collor);
+    background-color: var(--header-background-collor);
     display: flex;
-    flex-direction: row;
     height: var(--header-height-full);
     justify-content: space-between;
-    left: var(--menu-width-full);
+    left: var(--menu-width-large);
     margin: 0;
-    max-width: calc(100% - var(--menu-width-full));
-    padding: 0.5rem 2rem;
+    padding: 0;
     position: fixed;
     top: 0;
-    width: 100%;
+    width: calc(100% - var(--menu-width-large));
+    z-index: 1000;
 }
 
-.header--logo, .header--nav-user {
+.header--logo {
+    display: inline-block;
+    margin: 0;
+    padding: 1rem;
+}
+
+ .header--nav-user {
+    align-self: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     margin: 0;
     padding: 0;
 }
 
 .header--nav-user ul {
+    align-items: center;
+    align-self: center;
     list-style: none;
     display: flex;
-    justify-content: end;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
 }
 
 .header--nav-user ul li {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    font-size: medium;
     padding: 0 1rem;
+}
+
+.header--nav-user ul i {
+    padding: 0 .5rem;
 }
 
 .header--nav-user ul li a {
     color: var(--header-items-collor);
-    text-decoration: none;
     font-weight: bold;
+    text-decoration: none;
+}
+
+.header--nav-user ul li a:hover {
+    color: var(--header-items-hover);
+}
+
+.nav--user-register {
+    display: none;
+}
+
+.nav--user-enter {
+    display: none;
+}
+
+.nav--user-logged {
+    display: inline-block;
 }
 
 .nav--menu {
-    align-items: center;
     background-color: var(--menu-background-collor);
     display: flex;
     height: 100%;
     justify-content: center;
     left: 0;
+    margin: 0;
+    padding: 0;
     position: fixed;
     top: 0;
-    width: var(--menu-width-full);
+    width: var(--menu-width-large);
+    z-index: 1000;
 }
-
 
 .nav--menu ul {
-    list-style: none;
     display: flex;
+    list-style: none;
     flex-direction: column;
     justify-content: center;
-}
-
-.nav--menu-item {
-    color: var(--menu-items-collor); 
-    height: 40px;
-    width: 40px;
-
+    padding: 0;
 }
 
 .nav--menu ul li {
@@ -83,43 +111,68 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    font-size: medium;
-    padding: 2rem 0.5rem;
+    padding: 1.5rem 0;
 }
 
 .nav--menu ul li a {
+    align-items: center;
     color: var(--menu-items-collor);
-    text-decoration: none;
+    display: flex;
+    flex-direction: column;
     font-weight: bold;
+    justify-content: center;
+    text-decoration: none;
+}
+
+.nav--menu ul li a:hover {
+    color: var(--menu-items-hover);
+}
+
+.nav--menu-icon {
+font-size: large;
+}
+
+.nav--menu-text {
+    font-size: small;
 }
 
 #content {
-    left: var(--menu-width-full);
-    min-height: 90vh;
-    top: var(--header-height-full)
+    flex: 1;
+    left: var(--menu-width-large);
+    max-width: calc(100% - var(--menu-width-large));
+    padding-bottom: var(--footer-height-large);
+    position: relative;
+    top: var(--header-height-full);
 }
 
-footer {
+.footer-container {
     align-items: center;
     background-color: #0FA4AF;
+    color: var(--footer-items-collor);
     display: flex;
     justify-content: space-around;
-    min-height: 20vh;
-    padding: 0 2rem;
+    height: var(--footer-height-large);
+    left: var(--menu-width-large);
+    min-height: var(--footer-height-large);
+    padding: 0 1rem;
+    position: relative;
+    width: calc(100% - var(--menu-width-large));
 }
 
 .footer--logo {
     align-items: center;
-    background-color: #0FA4AF;
     justify-content: center;
 }
 
 .footer--contact {
-    background-color: #0FA4AF;
+    font-size: medium;
+}
+
+.footer--contact ul :first-child{
+    font-weight: bold;
 }
 
 .footer--nav {
-    background-color: #0FA4AF;
     padding: 0.5rem;
 }
 
@@ -128,6 +181,7 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    padding: 0;
 }
 
 .footer--nav ul li {
@@ -135,7 +189,65 @@ footer {
 }
 
 .footer--nav ul li a {
-    color: #024950;
-    text-decoration: none;
+    color: var(--footer-items-collor);
+    text-decoration: underline;
     font-weight: bold;
+}
+    
+@media (max-width: 768px) {
+    .header-container {
+        height: var(--header-height-colapsed);
+        justify-content: end;
+        left: auto;
+        width: 100%;
+    }
+
+    .header--logo {
+        display: none;
+    }
+
+    .header--nav-user {
+        padding: 0;
+    }
+
+    .header--nav-user ul {
+        margin: 0;
+    }
+
+    .nav--menu {
+        bottom: 0;
+        height: var(--menu-height-small);
+        top: auto;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }
+
+    .nav--menu ul {
+        flex: 1;
+        flex-direction: row;
+        justify-content: space-around;
+        margin: 0;
+        padding: 0;
+    }
+    
+    .nav--menu ul li {
+        padding: 0 .5rem;
+    }
+    
+    .nav--menu-text {
+        font-size: xx-small;
+    }
+
+    #content {
+        left: auto;
+        max-width: 100%;
+        padding-bottom: var(--menu-height-small);
+        top: var(--header-height-colapsed);
+    }
+
+    .footer-container {
+        display: none;
+    }
+
 }
