--- a/client/styles.css
+++ b/client/styles.css
@@ -1,7 +1,7 @@
 @import "./assets/frame/bootstrap.min.css";
 @import "./styles/navigation.css";
 @import "./styles/cookie-consent.css"; 
-@import "./styles/policies.css"; 
+@import "./styles/terms.css"; 
 @import "./styles/schedule.css";
 @import "./styles/files.css";
 /* @import "./styles/home.css";
