--- a/client/styles/appointments.css
+++ b/client/styles/appointments.css
@@ -33,34 +33,32 @@
     display: flex;
     flex: 1;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-between;
     padding: 1rem;
-    width: 100%;
-}
-
-.appointments-new--params-time {
-    align-items: center;
-    display: flex;
-    margin: auto;
-    max-width: 80%;
-    text-align: center;
-}
-
-.buthidden {
-    visibility: hidden;
 }
 
 .appointments-new--display {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 1rem;
+}
+
+#appointmentNewForm {
+    justify-content: space-around;
     align-items: center;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    flex: 1;
-    justify-content: space-around;
 }
 
-.appointments-new--display div {
-    padding: 2rem;
+#appointmentNewForm div {
+    margin: 1rem;
+}
+
+.buthidden {
+    display: none;
 }
 
 .appointments-list--display {
@@ -68,14 +66,31 @@
     flex-direction: column;
 }
 
-.appointments-list--display thead {
+.appointments-list h3 {
+    margin-bottom: 2rem;
+}
+
+.appointments-list--display thead tr {
+    align-items: center;
     display: flex;
-    justify-content: space-between;
+    font-weight: bold;
+    justify-content: space-evenly;
+    margin-bottom: 1rem;
 }
 
 .appointments-list--display tbody tr {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    margin-bottom: 1rem;
+}
+
+.appointments-list--display thead th, .appointments-list--display tbody tr td {
+    align-self: center;
+    width: 20%;
+}
+
+.appointments-list--display thead th:nth-child(3), .appointments-list--display tbody tr td:nth-child(3) {
+    width: 30%;
 }
 
 @media (max-width: 768px) {
