--- a/client/styles/cookie-consent.css
+++ b/client/styles/cookie-consent.css
@@ -23,6 +23,7 @@
     background-color: #0FA4AF;
     color: #fff;
     border: none;
+    border-radius: 7%;
     height: 2.5rem;
     padding: .5rem;
     margin: 2rem;
