--- a/client/styles/cookie-consent.css
+++ b/client/styles/cookie-consent.css
@@ -1,11 +1,12 @@
 .cookie-consent {
+    align-items: center;
     bottom: 0;
-    background-color: #333;
-    color: #fff;
+    background-color: #555555;
+    color: #FFF;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     margin: 0;
-    padding: 0;
+    padding: 1rem;
     position: fixed;
     text-align: center;
     width: 100%;
@@ -15,22 +16,12 @@
 .cookie-consent p {
     display: inline;
     margin: 0;
-    padding: 2rem 1rem;
+    padding: 0;
     text-align: center;
 }
 
 .cookie-consent button {
-    background-color: #0FA4AF;
-    color: #fff;
-    border: none;
-    border-radius: 7%;
     height: 2.5rem;
     padding: .5rem;
-    margin: 2rem;
-    cursor: pointer;
     width: 5rem;
-}
-
-.cookie-consent button:hover {
-    background-color: #AFDDE5;
 }
