--- a/client/styles/navigation.css
+++ b/client/styles/navigation.css
@@ -32,7 +32,7 @@
 .header--logo {
     display: inline-block;
     margin: 0;
-    padding: 1rem;
+    padding: .5rem;
 }
 
  .header--nav-user {
@@ -70,18 +70,6 @@
 
 .header--nav-user ul li a:hover {
     color: var(--header-items-hover);
-}
-
-.nav--user-register {
-    display: none;
-}
-
-.nav--user-login {
-    display: none;
-}
-
-.nav--user-logged {
-    display: inline-block;
 }
 
 .nav--menu {
