--- a/client/styles.css
+++ b/client/styles.css
@@ -4,6 +4,7 @@
 @import "./styles/appointments.css";
 @import "./styles/files.css";
 @import "./styles/contacts.css";
+@import "./styles/services.css";
 /* @import "./styles/home.css";
 @import "./styles/users.css";
 @import "./styles/cart.css";
