--- a/client/styles.css
+++ b/client/styles.css
@@ -1,3 +1,4 @@
+@import "./styles/home.css";
 @import "./styles/navigation.css";
 @import "./styles/cookie-consent.css"; 
 @import "./styles/terms.css"; 
@@ -5,7 +6,7 @@
 @import "./styles/files.css";
 @import "./styles/contacts.css";
 @import "./styles/services.css";
-/* @import "./styles/home.css";
+/* ;
 @import "./styles/users.css";
 @import "./styles/cart.css";
 @import "./styles/payment.css";*/
