--- a/client/styles/users.css
+++ b/client/styles/users.css
@@ -1,35 +1,41 @@
-/* body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f0f0f0; */
-}
 .login-container {
     background: white;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
 .login-container h2 {
-    margin-bottom: 20px;
+    margin-bottom: 1rem;
+    text-align: center;
 }
-.login-container button {
+
+.login--forms label, .login--forms input {
+    margin: .25rem;
+}
+
+.login--forms button {
     display: block;
     width: 100%;
-    padding: 10px;
-    margin: 10px 0;
-    font-size: 16px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+    margin: 1rem 0;
 }
+
+.login--username {
+    border-bottom: 1px solid #CCC;
+    margin-bottom: 1rem;
+}
+
 #google-login-btn {
     background-color: #4285F4;
     color: white;
+    display: block;
+    width: 100%;
+    margin: 1rem 0;
 }
 #facebook-login-btn {
     background-color: #3B5998;
     color: white;
+    display: block;
+    width: 100%;
+    margin: 1rem 0;
 }
