--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -227,7 +227,7 @@ font-size: large;
         font-size: xx-small;
     }
 
-    #content {
+    #contentArea {
         left: auto;
         max-width: 100%;
         padding-bottom: var(--menu-height-small);
