--- a/styles/services.css
+++ b/styles/services.css
@@ -29,10 +29,12 @@
 #singleServiceForm div {
     flex: 1;
     padding: 0 1rem;
+    min-width: 200px;
 }
 
 #singleServiceForm button {
     height: 2.5rem;
+    margin-top: 1rem;
     width: 8rem;
 }
 
