--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -20,3 +20,9 @@
 #userContactMessage {
     height: 6rem;
 }
+
+@media (max-width: 768px) {
+    #userContactForm {
+        padding: 1rem 2rem;
+    }
+}
