Start registration for users

--- a/styles/users.css
+++ b/styles/users.css
@@ -1,12 +1,12 @@
 .login-container, .register-container {
     background: white;
-    padding: 20px;
+    padding: 1rem;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .login-container h2, .register-container h2 {
-    margin-bottom: 1rem;
+    margin-bottom: .5rem;
     text-align: center;
 }
 
@@ -17,17 +17,25 @@
 .login--forms button, .register--forms button {
     display: block;
     width: 100%;
-    margin: 1rem 0;
+    margin: .5rem 0;
 }
 
-.login--username, .register--username {
+.login--username {
     border-bottom: 1px solid #CCC;
-    margin-bottom: 1rem;
+    margin-bottom: .5rem;
 }
 
 .login--others {
     display: flex;
     justify-content: space-between;
+}
+
+.register--divider {
+    background-color: #EEE;
+    border: 1px solid #EEE;
+    border-radius: 5px;
+    margin: .5rem;
+    padding: .5rem;
 }
 
 #google-login-btn {
